--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,3 +1,7 @@
+/* * {
+    border: 1px solid red;
+  } */
+
 body {
     background-color: lightseagreen;
     font-size: 50px;
@@ -10,6 +14,8 @@ h1 {
     background-color: cyan;
     text-align: center;
     font-weight: bold; 
+    margin-left: 500px;
+    margin-right: 500px;
 }
 
 ul {
@@ -22,10 +28,20 @@ ul {
     flex-direction: column;
 }
 
-.list-item {
+.list-item1 {
     color: pink;
-    text-align: left;
-    line-height: 1.5;
+    margin: 5px;
+}
+.list-item2 {
+    color: pink;
+    margin: 5px;
+    margin-right: 253px;
+}
+
+.list-item3 {
+    color: pink;
+    margin: 5px;
+    margin-right: 60px;
 }
 
 .list-item a:hover {
