--- a/css/recipes-style.css
+++ b/css/recipes-style.css
@@ -8,6 +8,15 @@ h1, h2 {
     text-align: center;
     font-family: fantasy;
     line-height: 1.2;
+    text-shadow: 
+    -2px -2px 0 black,  
+     2px -2px 0 black,
+    -2px  2px 0 black,
+     2px  2px 0 black,
+    -2px  0   0 black,
+     2px  0   0 black,
+     0   -2px 0 black,
+     0    2px 0 black;
 }
 h1 {
     font-size: 80px;
@@ -42,6 +51,7 @@ ul {
     background-color: #f4f4f4;
     border-radius: 8px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 10px 50px;
 }
 
 ol {
@@ -52,5 +62,6 @@ ol {
     background-color: #f4f4f4;
     border-radius: 8px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 10px 50px;
 }
   
